# custom-player-qt6

./: CMakeLists.txt  ctrlbar.cpp  ctrlbar.h  ctrlbar.ui  displaywind.cpp  main.cpp  mainwind.cpp  mainwind.h  mainwind.ui  playlistwind.cpp  titlebar.cpp  titlebar.ui
custom_log/: CMakeLists.txt  base_logger.cpp  base_logger.h  custom_log.cpp  custom_log.h
ijkmediaplayer/: CMakeLists.txt  ijkmediaplayer.cpp  ijkmediaplayer.h
message_queue/: CMakeLists.txt  message_queue.cpp  message_queue.h
